--- a/index.html
+++ b/index.html
@@ -555,19 +555,24 @@
           ]
         },
 
-        education: {
-          title: "Education and Research Tools",
-          description: "AI tools tailored for educational environments:",
-          tools: [
+      education: {
+        title: "Education and Research Tools",
+        description: "AI tools tailored for educational environments:",
+        tools: [
             { name: "Century", description: "AI learning platform for personalized education", link: "https://www.century.tech/" },
             { name: "Gradescope", description: "AI-assisted grading and assessment tool", link: "https://www.gradescope.com/" },
-            { name: "Elicit", description: "Research assistant for literature review", link: "https://elicit.org/" }
+            { name: "Elicit", description: "Research assistant for literature review", link: "https://elicit.org/" },
+            { name: "Eduaide", description: "AI-powered teaching assistant for educators", link: "https://eduaide.ai/" },
+            { name: "SchoolAI", description: "Comprehensive AI platform for school management and learning", link: "https://www.schoolai.com/" },
+            { name: "Magic School", description: "Interactive AI-driven learning experiences for students", link: "https://magicschool.ai/" },
+            { name: "Quizizz", description: "Gamified assessment platform with AI-powered insights", link: "https://quizizz.com/" },
+            { name: "Questionwell", description: "AI-driven question generation for exams and assessments", link: "https://questionwell.org/" }
           ],
           options: [
-            { text: "Start over", node: "start" },
-            { text: "Explore different options", node: "organization" }
-          ]
-        }
+              { text: "Start over", node: "start" },
+              { text: "Explore different options", node: "organization" }
+            ]
+          }
       };
 
       // AIArcadeFinder component
